--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
 
